--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -3,11 +3,11 @@
     <style name="Theme.Pog" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
         <!-- Primary brand color. -->
         <item name="colorPrimary">@color/pog_red</item>
-        <item name="colorPrimaryVariant">@color/pog_salmon</item>
+        <item name="colorPrimaryVariant">@color/pog_red</item>
         <item name="colorOnPrimary">@color/white</item>
         <!-- Secondary brand color. -->
         <item name="colorSecondary">@color/pog_orange</item>
-        <item name="colorSecondaryVariant">@color/pog_salmon</item>
+        <item name="colorSecondaryVariant">@color/pog_orange</item>
         <item name="colorOnSecondary">@color/black</item>
         <!-- Status bar color. -->
         <item name="android:statusBarColor" tools:targetApi="l">?attr/colorPrimaryVariant</item>
