--- a/app/src/main/res/layout/fragment_search.xml
+++ b/app/src/main/res/layout/fragment_search.xml
@@ -2,8 +2,12 @@
 <layout>
     <data>
         <variable
+            name="fragment"
+            type="com.pog.passionfruitOrangeGuava.features.search.ui.SearchFragment" />
+        <variable
             name="viewmodel"
             type="com.pog.passionfruitOrangeGuava.features.search.viewmodels.SearchViewModel" />
+        <import type="android.view.View"/>
     </data>
     <androidx.constraintlayout.widget.ConstraintLayout
         xmlns:android="http://schemas.android.com/apk/res/android"
@@ -22,5 +26,24 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent">
         </EditText>
+
+        <ProgressBar
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:visibility="@{viewmodel.isLoading() ? View.VISIBLE : View.GONE}"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/etUserInput"/>
+
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/rvUserList"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:visibility="@{viewmodel.isLoading() ? View.GONE : View.VISIBLE}"
+            app:setAdapter="@{fragment.adapter}"
+            app:setItems="@{viewmodel.userList}"
+            app:layout_constraintTop_toBottomOf="@id/etUserInput"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"/>
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
