--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -7,4 +7,7 @@
     <dimen name="margin_100">16dp</dimen>
     <dimen name="margin_150">24dp</dimen>
     <dimen name="margin_200">32dp</dimen>
+
+    <dimen name="font_size_medium">24sp</dimen>
+    <dimen name="image_size">60ddp</dimen>
 </resources>
